# corpus

./: .gitignore  CLAUDE.md  LICENSE  config.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: python-reviewer.md  security-reviewer.md  test-writer.md
.claude/skills/code-review/: SKILL.md
.claude/skills/data-pipeline/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/model-training/: SKILL.md
.github/workflows/: daily-corpus.yml  test.yml
scripts/: daily_run.sh
src/mozhi/: __init__.py  cli.py  config.py  models.py
src/mozhi/collectors/: __init__.py  base.py  huggingface.py  madurai.py  wikipedia.py
src/mozhi/processing/: annotator.py  dedup.py  language.py  normalizer.py  pipeline.py  quality.py
src/mozhi/publishing/: formatter.py  uploader.py
src/mozhi/utils/: io.py  logging.py
tests/: test_config.py  test_io.py  test_models.py
tests/test_collectors/: test_base.py  test_huggingface.py  test_wikipedia.py
tests/test_processing/: test_annotator.py  test_dedup.py  test_normalizer.py  test_pipeline.py  test_quality.py
tests/test_publishing/: test_formatter.py  test_uploader.py
